--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.8.0",
+    "flatted": "^3.1.1",
     "mongoose": "^5.12.12",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
